3 files modified, 2 added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://kendo.cdn.telerik.com/themes/6.1.0/bootstrap/bootstrap-nordic.css"></link>
 </head>
 <body>
-    <my-app>
+    <app-root>
         <span class="k-icon k-i-loading" style="color: #ff6358"></span>
-    </my-app>
+    </app-root>
 </body>
